# nitf_io

./: .gitmodules  Dockerfile  nitf_reader.code-workspace  readme.md
src/: CMakeLists.txt  helpers.cpp  main.cpp  main_print_header.cpp  main_round_trip.cpp  main_write_images.cpp  nitf_reader.hpp  print_header.cpp  print_img_seg_header.cpp  print_img_seg_info.cpp  print_nitf_header.cpp
